Introduce LRA executor extension integration